# aldm

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: pre_release.yml  release.yml
aldm/: Cargo.toml
aldm-cli/: Cargo.toml
aldm-cli/src/: lib.rs  main.rs
aldm-db/: README.md  input-file.yaml
aldm-gui/: Cargo.toml
aldm-gui/src/: lib.rs  main.rs
aldm/src/: lib.rs
aldm/src/app/: config.rs  logging.rs  mod.rs
aldm/src/data/: database.rs
aldm/src/ui/: mod.rs
dapp/: Cargo.toml
dapp/src/: config.rs  lib.rs  permissions.rs
packaging/: build_package.sh  install_package.sh  setup.sh
packaging/aldm/: PKGBUILD
packaging/aldm-git/: PKGBUILD
packaging/aldm-local/: PKGBUILD
packaging/archlinux-driver-manager/: PKGBUILD
packaging/archlinux-driver-manager-git/: PKGBUILD
packaging/archlinux-driver-manager-local/: PKGBUILD
packaging/resources/usr/lib/sysusers.d/: aldm.conf
packaging/resources/usr/lib/tmpfiles.d/: aldm.conf
resources/: input-file.yaml
src/: aldm-gui.rs  aldm.rs  cli.rs  lib.rs  main.rs
src/actions/: mod.rs
src/app/: config.rs  logging.rs  mod.rs
src/data/: input_file.rs  mod.rs
src/ui/: cli.rs  gui.rs  mod.rs
