[package]
name = "aldm"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>"]
readme = "README.md"
repository = "https://gitlab.com/shivanandvp/aldm.git"
description = "A driver manager for Arch Linux"
# documentation = "https://docs.rs/aldm"
keywords = ["driver", "drivers", "hardware", "arch"]
categories = ["command-line-utilities"]
exclude = ["packaging/*", ".github/*", "*.code-workspace"]
default-run = "aldm"

[[bin]]
name = "aldm"
path = "src/aldm.rs"

[[bin]]
name = "aldm-gui"
path = "src/aldm-gui.rs"

[dependencies]

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["serde"] }

# Filesystem
xdg = "2.5"
permissions = "0.4"

# Error handling
snafu = "0.7"

# Data
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2.0"
serde_yaml = "0.9"
tracing-serde = "0.1"
speedy = "0.8"
log = { version = "0.4", features = ["serde"] }

# Internatinalization
fluent = "0.16"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help", "env"] }
clap-verbosity-flag = "2.0"
anstream = "0.5"
owo-colors = {version = "3.5", features = ["supports-colors"]}

# GUI
relm4 = "0.6"
relm4-components = "0.6"
