[workspace]

members = [
    "aldm",
    "aldm-cli",
    "aldm-gui",
]
resolver = "2"

[workspace.package]

version = "0.0.1"
description = "A driver manager for Arch Linux"
repository = "https://github.com/shivanandvp/aldm.git"
homepage = "https://github.com/shivanandvp/aldm"
authors = ["shivanandvp <shivanandvp.oss@gmail.com>"]
keywords = ["driver", "drivers", "hardware", "arch"]
exclude = ["packaging/*", ".github/*", "*.code-workspace"]
categories = []
documentation = "https://docs.rs/aldm"
readme = "README.md"
edition = "2021"

[workspace.dependencies]

aldm = { path = "aldm" }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Filesystem
xdg = "2.5"
permissions = "0.4"

# Error handling
snafu = "0.7"

# Data
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2"
serde_yaml = "0.9"
tracing-serde = "0.1"
speedy = "0.8"
log = "0.4"

# Internationalization
fluent = "0.16"

# CLI
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.0"
anstream = "0.5"
owo-colors = "3.5"
console = "0.15"
