[package]
name = "aldm-gui"
version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
exclude.workspace = true
categories.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]

aldm = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
snafu = {workspace = true}

# Internationalization
fluent = "0.16"

# CLI
clap = { workspace = true, features = ["cargo", "env"] }
clap-verbosity-flag = { workspace = true }
anstream = { workspace = true }
owo-colors = { workspace = true }
console = { workspace = true }

# GUI
relm4 = "0.6"
relm4-components = "0.6"
