[package]
name = "aldm"
version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
exclude.workspace = true
categories.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]

dapp = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# Filesystem
xdg = { workspace = true }
permissions = { workspace = true }

# Error handling
snafu = {workspace = true}

# Data
lazy_static = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_yaml = { workspace = true }
tracing-serde = { workspace = true }
speedy = { workspace = true }
log = { workspace = true, features = ["serde"] }

# Internationalization
fluent = "0.16"

# CLI
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
anstream = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"]}
console = { workspace = true }
