[package]
name = "dapp"
version.workspace = true
description = "A library to facilitate development of considerate applications."
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cli", "xdg", "log", "logging", "configure", "configuration"]
exclude.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dapp"
readme.workspace = true
edition.workspace = true

[features]
default = ["config", "log", "serde", "yaml"]
config = ["path"]
log = ["path", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
path = ["dep:permissions"]
serde = ["dep:serde"]
yaml = ["serde", "dep:serde_yaml"]

[dependencies]

# Logging
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Filesystem
xdg = { workspace = true }
permissions = { workspace = true, optional = true }

# Error handling
snafu = { workspace = true }

# Data
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
ambassador = "0.3.5"
